# satgpt

./: .gitignore  .gitmodules  CHANGELOG.rst  Embedding_Wikipedia_articles_for_search.ipynb  Question_answering_using_embeddings.ipynb  README.md  setup.cfg  setup.py
.config/: alpha.txt  satgpt.json
.github/workflows/: publish-pipy-test.yml
src/satgpt/: make_role.py  make_satgpt_role.py  module_demo.py  stacker.py  version.py
src/satgpt.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_module_demo.py
