[metadata]
name = satgpt
version = attr: satgpt.__version__
author = Kevin Lalli
author_email = kevin@opticsinspace.com
description = GPT for satellite mission planning. In development. Get your API keys ready!
long_description = file: README.md, CHANGELOG.rst
#, LICENSE.rst

#classifiers=['Development Status :: 1 - Planning'],

# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html#using-a-src-layout
[options]
packages = find:
package_dir =
    = src

install_requires =
    pystac
    shell-gpt
## Seems to only work in setup() call for now(?)
setup_requires =
    distro

[options.packages.find]
where = src